fixed dark mode switch issue

--- a/app/scss/components/mainSection.scss
+++ b/app/scss/components/mainSection.scss
@@ -55,7 +55,7 @@
 
 
         &:hover {
-            transform: scale(1.05) !important;
+            transform: scale(1.01) !important;
         }
     }
 }
